# zabbix-reports-pdf

./: .gitignore  README.md  images.py  main.py  pyproject.toml  topdf.py  zapi.py
templates/: template.html
