[tool.poetry]
name = "pdf-reports-zabbix"
version = "0.1.0"
description = ""
authors = ["Nickolsky <romb.intu@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_reports_zabbix"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
fpdf = "^1.7.2"
matplotlib = "^3.7.1"
pyzabbix = "^1.2.1"
urllib3 = "^1.26.15"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
